doing ml assign

--- a/Machine Learning/LAB 1.ipynb
+++ b/Machine Learning/LAB 1.ipynb
@@ -106,29 +106,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
-      "[[ 1 -2  3]\n",
-      " [-4  5 -6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "array = np.array([[1, -2, 3],[-4, 5, -6]])\n",
     "\n",
     "# Q2 A-i\n",
     "print(array.__abs__())\n",
-    "print(array)\n",
     "\n",
-    "for item in :\n",
-    "\n"
+    "# Q2 A-ii\n",
+    "print(\"25th percentile: \", np.percentile(array,25,axis=0))\n",
+    "print(\"50th percentile: \", np.percentile(array,50,axis=0))\n",
+    "print(\"75th percentile: \", np.percentile(array,75,axis=0))\n",
+    "print(\"25th percentile: \", np.percentile(array,25,axis=1))\n",
+    "print(\"50th percentile: \", np.percentile(array,50,axis=1))\n",
+    "print(\"75th percentile: \", np.percentile(array,75,axis=1))\n",
+    "\n",
+    "# Q2 A-iii\n",
+    "print(\"Mean Colmun: \", np.mean(array,axis=0))\n",
+    "print(\"Median Colmun: \", np.median(array,axis=0))\n",
+    "print(\"Standard Deviation Colmun: \", np.std(array,axis=0))\n",
+    "print(\"Mean Row: \", np.mean(array,axis=1))\n",
+    "print(\"Median Row: \", np.median(array,axis=1))\n",
+    "print(\"Standard Deviation Row: \", np.std(array,axis=1))\n",
+    "\n",
+    "# Q2 B\n",
+    "a = np.array([-1.8, -1.6, -0.5, 0.5,1.6, 1.8, 3.0])\n",
+    "print(\"Array :\",a)\n",
+    "print(\"Floor Values :\", np.floor(a))\n",
+    "print(\"Ceiling Values :\",np.ceil(a))\n",
+    "print(\"Truncated Values :\",np.trunc(a))\n",
+    "print(\"Rounded Values :\",np.round(a))"
    ]
   }
  ],
