--- a/Machine Learning/Assignment 2/lab2.ipynb
+++ b/Machine Learning/Assignment 2/lab2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "[18361 rows x 20 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "[18361 rows x 20 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,400 +991,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>BikeBuyer</th>\n",
-       "      <th>AvgMonthSpend</th>\n",
-       "      <th>MiddleName</th>\n",
-       "      <th>AddressLine1</th>\n",
-       "      <th>AddressLine2</th>\n",
-       "      <th>City</th>\n",
-       "      <th>StateProvinceName</th>\n",
-       "      <th>CountryRegionName</th>\n",
-       "      <th>PostalCode</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Education</th>\n",
-       "      <th>Occupation</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>MaritalStatus</th>\n",
-       "      <th>HomeOwnerFlag</th>\n",
-       "      <th>NumberCarsOwned</th>\n",
-       "      <th>NumberChildrenAtHome</th>\n",
-       "      <th>TotalChildren</th>\n",
-       "      <th>YearlyIncome</th>\n",
-       "      <th>LastUpdated</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>21173</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50.97</td>\n",
-       "      <td>C</td>\n",
-       "      <td>7090 C. Mount Hood</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Wollongong</td>\n",
-       "      <td>New South Wales</td>\n",
-       "      <td>Australia</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>Clerical</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>81916</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13249</td>\n",
-       "      <td>1</td>\n",
-       "      <td>53.11</td>\n",
-       "      <td>A</td>\n",
-       "      <td>3651 Willow Lake Rd</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Shawnee</td>\n",
-       "      <td>British Columbia</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>V9B 2C3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Partial College</td>\n",
-       "      <td>Clerical</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>81076</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>29350</td>\n",
-       "      <td>1</td>\n",
-       "      <td>54.08</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1774 Tice Valley Blvd.</td>\n",
-       "      <td>0</td>\n",
-       "      <td>West Covina</td>\n",
-       "      <td>California</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>91791</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>Clerical</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>86387</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13503</td>\n",
-       "      <td>1</td>\n",
-       "      <td>56.93</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2103 Baldwin Dr</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>England</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>L4 4HB</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Partial College</td>\n",
-       "      <td>Skilled Manual</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>61481</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>22803</td>\n",
-       "      <td>1</td>\n",
-       "      <td>55.41</td>\n",
-       "      <td>J</td>\n",
-       "      <td>Am Gallberg 234</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Werne</td>\n",
-       "      <td>Nordrhein-Westfalen</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>59368</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Partial College</td>\n",
-       "      <td>Skilled Manual</td>\n",
-       "      <td>M</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>51804</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18344</th>\n",
-       "      <td>25414</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.14</td>\n",
-       "      <td>C</td>\n",
-       "      <td>6627 Camelback Ct.</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Coronado</td>\n",
-       "      <td>California</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>92118</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Graduate Degree</td>\n",
-       "      <td>Skilled Manual</td>\n",
-       "      <td>F</td>\n",
-       "      <td>M</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>52953</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18345</th>\n",
-       "      <td>11459</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50.23</td>\n",
-       "      <td>A</td>\n",
-       "      <td>9627 Kendall Rd</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Port Macquarie</td>\n",
-       "      <td>New South Wales</td>\n",
-       "      <td>Australia</td>\n",
-       "      <td>2444</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>Skilled Manual</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60992</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18346</th>\n",
-       "      <td>12160</td>\n",
-       "      <td>1</td>\n",
-       "      <td>49.56</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4364 Viera Avenue</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Beaverton</td>\n",
-       "      <td>Oregon</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>97005</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Partial College</td>\n",
-       "      <td>Skilled Manual</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>51859</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18347</th>\n",
-       "      <td>14353</td>\n",
-       "      <td>0</td>\n",
-       "      <td>51.42</td>\n",
-       "      <td>I</td>\n",
-       "      <td>3866 Mt. Everest Court</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Vancouver</td>\n",
-       "      <td>British Columbia</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>V7L 4J4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>High School</td>\n",
-       "      <td>Clerical</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>87177</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18348</th>\n",
-       "      <td>16676</td>\n",
-       "      <td>1</td>\n",
-       "      <td>52.27</td>\n",
-       "      <td>A</td>\n",
-       "      <td>7870 Orangewood Dr.</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Grossmont</td>\n",
-       "      <td>California</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>91941</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Graduate Degree</td>\n",
-       "      <td>Professional</td>\n",
-       "      <td>F</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>136856</td>\n",
-       "      <td>2017-03-06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>18349 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       CustomerID  BikeBuyer  AvgMonthSpend MiddleName  \\\n",
-       "0           21173          1          50.97          C   \n",
-       "1           13249          1          53.11          A   \n",
-       "2           29350          1          54.08          A   \n",
-       "3           13503          1          56.93          A   \n",
-       "4           22803          1          55.41          J   \n",
-       "...           ...        ...            ...        ...   \n",
-       "18344       25414          0          48.14          C   \n",
-       "18345       11459          1          50.23          A   \n",
-       "18346       12160          1          49.56          A   \n",
-       "18347       14353          0          51.42          I   \n",
-       "18348       16676          1          52.27          A   \n",
-       "\n",
-       "                 AddressLine1 AddressLine2            City  \\\n",
-       "0          7090 C. Mount Hood            0      Wollongong   \n",
-       "1         3651 Willow Lake Rd            0         Shawnee   \n",
-       "2      1774 Tice Valley Blvd.            0     West Covina   \n",
-       "3             2103 Baldwin Dr            0       Liverpool   \n",
-       "4             Am Gallberg 234            0           Werne   \n",
-       "...                       ...          ...             ...   \n",
-       "18344      6627 Camelback Ct.            0        Coronado   \n",
-       "18345         9627 Kendall Rd            0  Port Macquarie   \n",
-       "18346       4364 Viera Avenue            0       Beaverton   \n",
-       "18347  3866 Mt. Everest Court            0       Vancouver   \n",
-       "18348     7870 Orangewood Dr.            0       Grossmont   \n",
-       "\n",
-       "         StateProvinceName CountryRegionName PostalCode  ...        Education  \\\n",
-       "0          New South Wales         Australia       2500  ...        Bachelors   \n",
-       "1         British Columbia            Canada    V9B 2C3  ...  Partial College   \n",
-       "2               California     United States      91791  ...        Bachelors   \n",
-       "3                  England    United Kingdom     L4 4HB  ...  Partial College   \n",
-       "4      Nordrhein-Westfalen           Germany      59368  ...  Partial College   \n",
-       "...                    ...               ...        ...  ...              ...   \n",
-       "18344           California     United States      92118  ...  Graduate Degree   \n",
-       "18345      New South Wales         Australia       2444  ...        Bachelors   \n",
-       "18346               Oregon     United States      97005  ...  Partial College   \n",
-       "18347     British Columbia            Canada    V7L 4J4  ...      High School   \n",
-       "18348           California     United States      91941  ...  Graduate Degree   \n",
-       "\n",
-       "           Occupation Gender MaritalStatus HomeOwnerFlag NumberCarsOwned  \\\n",
-       "0            Clerical      M             M             1               3   \n",
-       "1            Clerical      M             M             1               2   \n",
-       "2            Clerical      F             S             0               3   \n",
-       "3      Skilled Manual      M             M             1               2   \n",
-       "4      Skilled Manual      M             S             1               1   \n",
-       "...               ...    ...           ...           ...             ...   \n",
-       "18344  Skilled Manual      F             M             0               1   \n",
-       "18345  Skilled Manual      F             S             0               2   \n",
-       "18346  Skilled Manual      F             S             0               2   \n",
-       "18347        Clerical      F             S             0               0   \n",
-       "18348    Professional      F             M             1               2   \n",
-       "\n",
-       "       NumberChildrenAtHome  TotalChildren  YearlyIncome  LastUpdated  \n",
-       "0                         0              1         81916   2017-03-06  \n",
-       "1                         1              2         81076   2017-03-06  \n",
-       "2                         0              0         86387   2017-03-06  \n",
-       "3                         1              2         61481   2017-03-06  \n",
-       "4                         0              0         51804   2017-03-06  \n",
-       "...                     ...            ...           ...          ...  \n",
-       "18344                     0              2         52953   2017-03-06  \n",
-       "18345                     0              0         60992   2017-03-06  \n",
-       "18346                     0              0         51859   2017-03-06  \n",
-       "18347                     0              0         87177   2017-03-06  \n",
-       "18348                     0              0        136856   2017-03-06  \n",
-       "\n",
-       "[18349 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mergedDF"
+    "mergedDF\n",
+    "mergedDF.to_csv(\"AWsalesMergedAWcustomers.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
