Added name in ml file

--- a/Machine Learning/Assignment 2/lab2.ipynb
+++ b/Machine Learning/Assignment 2/lab2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Name - Mukul Jindal\n",
+    "Group - 3CS10\n",
+    "Roll No - 102116063"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
