--- a/Machine Learning/Assignment 2/lab2.ipynb
+++ b/Machine Learning/Assignment 2/lab2.ipynb
@@ -127,8 +127,7 @@
    ],
    "source": [
     "AWCustomers = pd.read_csv('./archive/AWCustomers.csv')\n",
-    "print(pd.isna(AWCustomers))\n",
-    "\n"
+    "print(pd.isna(AWCustomers))"
    ]
   },
   {
