--- a/Machine Learning/Assignment 3/LAB 3 Q3.ipynb
+++ b/Machine Learning/Assignment 3/LAB 3 Q3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "[204 rows x 26 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,44 +657,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mukul\\AppData\\Local\\Temp\\ipykernel_10084\\1289604881.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6486/1289604881.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dataSet[i] = dataSet[i].fillna(median)\n",
-      "C:\\Users\\mukul\\AppData\\Local\\Temp\\ipykernel_10084\\1289604881.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6486/1289604881.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dataSet[i] = dataSet[i].fillna(median)\n",
-      "C:\\Users\\mukul\\AppData\\Local\\Temp\\ipykernel_10084\\1289604881.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6486/1289604881.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dataSet[i] = dataSet[i].fillna(median)\n",
-      "C:\\Users\\mukul\\AppData\\Local\\Temp\\ipykernel_10084\\1289604881.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6486/1289604881.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dataSet[i] = dataSet[i].fillna(median)\n",
-      "C:\\Users\\mukul\\AppData\\Local\\Temp\\ipykernel_10084\\1289604881.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6486/1289604881.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dataSet[i] = dataSet[i].fillna(median)\n",
-      "C:\\Users\\mukul\\AppData\\Local\\Temp\\ipykernel_10084\\1289604881.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6486/1289604881.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1044,7 +1044,7 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,31 +1076,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['two' 'four']\n",
+      "['four' 'six' 'five' 'three' 'twelve' 'two' 'eight']\n",
+      "200\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>normalized_losses</th>\n",
+       "      <th>make</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>num_doors</th>\n",
+       "      <th>body_style</th>\n",
+       "      <th>drive_wheels</th>\n",
+       "      <th>engine_location</th>\n",
+       "      <th>wheel_base</th>\n",
+       "      <th>...</th>\n",
+       "      <th>engine_size</th>\n",
+       "      <th>fuel_system</th>\n",
+       "      <th>bore</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compression_ratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peak_rpm</th>\n",
+       "      <th>city_mpg</th>\n",
+       "      <th>highway_mpg</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>130</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>hatchback</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>152</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>154</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>fwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>109</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>13950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>4wd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>115</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>fwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>110</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15250</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'two'"
+       "   symboling normalized_losses         make fuel_type aspiration num_doors  \\\n",
+       "0          3             115.0  alfa-romero       gas        std       two   \n",
+       "1          1             115.0  alfa-romero       gas        std       two   \n",
+       "2          2               164         audi       gas        std      four   \n",
+       "3          2               164         audi       gas        std      four   \n",
+       "4          2             115.0         audi       gas        std       two   \n",
+       "\n",
+       "    body_style drive_wheels engine_location  wheel_base  ...  engine_size  \\\n",
+       "0  convertible          rwd           front        88.6  ...          130   \n",
+       "1    hatchback          rwd           front        94.5  ...          152   \n",
+       "2        sedan          fwd           front        99.8  ...          109   \n",
+       "3        sedan          4wd           front        99.4  ...          136   \n",
+       "4        sedan          fwd           front        99.8  ...          136   \n",
+       "\n",
+       "   fuel_system  bore  stroke compression_ratio horsepower  peak_rpm city_mpg  \\\n",
+       "0         mpfi  3.47    2.68               9.0        111      5000       21   \n",
+       "1         mpfi  2.68    3.47               9.0        154      5000       19   \n",
+       "2         mpfi  3.19    3.40              10.0        102      5500       24   \n",
+       "3         mpfi  3.19    3.40               8.0        115      5500       18   \n",
+       "4         mpfi  3.19    3.40               8.5        110      5500       19   \n",
+       "\n",
+       "  highway_mpg  price  \n",
+       "0          27  16500  \n",
+       "1          26  16500  \n",
+       "2          30  13950  \n",
+       "3          22  17450  \n",
+       "4          25  15250  \n",
+       "\n",
+       "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(dataSet['num_doors'].unique())\n",
+    "print(dataSet['num_cylinders'].unique())\n",
     "stringToNumber = {\n",
     "    'one':1,\n",
     "    'two':2,\n",
     "    'three':3,\n",
     "    'four':4,\n",
-    "\n",
+    "    'five':5,\n",
+    "    'six':6,\n",
+    "    'eight':8,\n",
+    "    'twelve': 12,\n",
     "}\n",
-    "# for i in dataSet['num_doors']:\n",
-    "#     print(i)\n",
-    "dataSet['num_doors'][0]"
+    "print(len(dataSet['num_doors']))\n",
+    "# for i in range(len(dataSet['num_doors'])):\n",
+    "#     dataSet['num_doors'][i] = stringToNumber[dataSet['num_doors'][i]]\n",
+    "# for i in range(len(dataSet['num_cylinders'])):\n",
+    "#     dataSet['num_cylinders'][i] = stringToNumber[dataSet['num_cylinders'][i]]\n",
+    "dataSet.head()"
    ]
   }
  ],
@@ -1120,7 +1333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
